 GwMicro Window Eyes backend?
 Dolphin API backend?


EXTERNAL TODO:
--------------
 OSX installer?
 Android TTS app for android backend

** 1.0.6 **

Add Dutch translation - thanks to leonardder
Automatically disable if pre-installed
Fix issues playing informational sounds when addon is pre-installed

** 1.0.5 **

Add client=t to Google backend URL to fix 503 errors

** 1.0.4 **

Add German translation - thanks to donkamillo
Fix keymapeditor speech

** 1.0.3 **

Add Italian translation - thanks to falcon03

** 1.0.2 **

Install default keymap on first run

** 1.0.1 **

Change backend priorities

** 1.0.0 **

Official repository release

** 0.1.2b **

Fix for the addon speaking '32166' instead of 'Addons updated'
Now speaks selected status for items in multi-select dialogs
Add handling for subtitles dialog
Now speaks keyboard dialog again in nightlies and future 15.0 release

** 0.1.1b **

Improve reading of window extra texts, for example System Info now properly reads the Kodi build info
Fix for slideout menu boolean settings not reading properly
Fix for slideout menu not reading properly on all PVR windows

** 0.1.0b **

Changed name to "Kodi Screen Reader"
Removed NVDA library. To enable NVDA, install "NVDA Controller Client DLL" from the "Add-on libraries" category on my repository
Added Recite backend (it is awful - added for completeness plus it was easy)
Added handling for the PVR Guide Search dialog (Not very useful until a future Kodi version)

** 0.0.88b **

Fix for versions with letter suffixes causing errors :)

** 0.0.87b **

Helix fixes for PVR
Now handles all PVR views (Helix)
Better item extra info of PVR items (Helix)
Now reads item label instead of title in video/music views
Now reads watched and resumable on videos
Fix for left slideout menus not reading

** 0.0.86 **

Fix for video info window buttons not reading properly on Helix
Enhancements to video info reading
Added speaking of currently playing item on pause