@@ -1,5 +1,7 @@
 # -*- coding: utf-8 -*-
-import sys, xbmc, xbmcaddon
+import os, sys, xbmc, xbmcaddon
+
+DISABLE_PATH = os.path.join(xbmc.translatePath('special://profile').decode('utf-8'), 'addon_data', 'service.xbmc.tts', 'DISABLED')
 
 def getXBMCVersion():
     import json
@@ -11,33 +13,59 @@ def getXBMCVersion():
 
 BASE = '{ "jsonrpc": "2.0", "method": "Addons.SetAddonEnabled", "params": { "addonid": "service.xbmc.tts","enabled":%s}, "id": 1 }'
 
+
 def enableAddon():
-    xbmc.executeJSONRPC(BASE % 'true') #So enable it instead
-    
+    if os.path.exists(DISABLE_PATH):
+        os.remove(DISABLE_PATH)
+
+    if isPostInstalled():
+        if addonIsEnabled():
+            xbmc.executebuiltin('RunScript(service.xbmc.tts)')
+        else:
+            xbmc.executeJSONRPC(BASE % 'true') #So enable it instead
+    else:
+        xbmc.executebuiltin('RunScript(service.xbmc.tts)')
+
+
 def disableAddon():
-    version = getXBMCVersion()
-    if not version or version['major'] < 13: return #Disabling in this manner crashes on Frodo
-    xbmc.executeJSONRPC(BASE % 'false') #Try to disable it
-    #if res and 'error' in res: #If we have an error, it's already disabled
-    #print res
-    
+    with open(DISABLE_PATH, 'w'):
+        pass
+
+    if isPostInstalled():
+        version = getXBMCVersion()
+        if not version or version['major'] < 13: return #Disabling in this manner crashes on Frodo
+        xbmc.executeJSONRPC(BASE % 'false') #Try to disable it
+        #if res and 'error' in res: #If we have an error, it's already disabled
+        #print res
+
+
 def addonIsEnabled():
-    import json
-    resp = xbmc.executeJSONRPC('{ "jsonrpc": "2.0", "id": 1, "method": "Addons.GetAddonDetails", "params": {"addonid":"service.xbmc.tts","properties": ["name","version","enabled"]}}')
-    data = json.loads(resp)
-    if not 'result' in data: return False
-    if not 'addon' in data['result']: return False
-    if not 'enabled' in data['result']['addon']: return False
-    return data['result']['addon']['enabled']
+    if os.path.exists(DISABLE_PATH):
+        return False
+
+    if isPostInstalled():
+        import json
+        resp = xbmc.executeJSONRPC('{ "jsonrpc": "2.0", "id": 1, "method": "Addons.GetAddonDetails", "params": {"addonid":"service.xbmc.tts","properties": ["name","version","enabled"]}}')
+        data = json.loads(resp)
+        if not 'result' in data: return False
+        if not 'addon' in data['result']: return False
+        if not 'enabled' in data['result']['addon']: return False
+        return data['result']['addon']['enabled']
+    else:
+        return True
+
 
 def toggleEnabled():
     try:
         if not addonIsEnabled(): raise Exception('Addon Disabled')
         xbmcaddon.Addon('service.xbmc.tts')
+        xbmc.log('service.xbmc.tts: DISABLING')
         xbmc.executebuiltin('XBMC.RunScript(service.xbmc.tts,key.SHUTDOWN)')
     except:
+        xbmc.log('service.xbmc.tts: ENABLING')
         enableAddon()
-        
+
+
 def reset():
     if not addonIsEnabled(): return
     disableAddon()
@@ -46,11 +74,16 @@ def reset():
         xbmc.sleep(500)
         ct+=1
     enableAddon()
-    
+
+def isPostInstalled():
+    homePath = xbmc.translatePath('special://home').decode('utf-8')
+    postInstalledPath = os.path.join(homePath, 'addons', 'service.xbmc.tts')
+    return os.path.exists(postInstalledPath)
+
 if __name__ == '__main__':
     arg = None
     if len(sys.argv) > 1: arg = sys.argv[1]
     if arg == 'RESET':
-        reset()    
+        reset()
     else:
         toggleEnabled()
